--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@types/express": "^4.0.38",
     "@types/node": "^8.0.47",
+    "@types/ws": "^3.2.0",
     "express": "^4.16.2",
-    "socket.io": "^2.0.4"
+    "socket.io": "^2.0.4",
+    "ws": "^3.2.0"
   }
 }
