--- a/package.json
+++ b/package.json
@@ -4,16 +4,26 @@
   "description": "",
   "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "concurrently \"tsc -w\" \"webpack --progress --colors --watch --config ./webpack.config.js\""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.0.38",
     "@types/node": "^8.0.47",
+    "@types/prop-types": "^15.5.2",
     "@types/ws": "^3.2.0",
+    "axios": "^0.17.0",
+    "concurrently": "^3.5.0",
     "express": "^4.16.2",
+    "prop-types": "^15.6.0",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "socket.io": "^2.0.4",
+    "webpack": "^3.8.1",
     "ws": "^3.2.0"
   }
 }
