--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@types/express": "^4.0.38",
     "@types/node": "^8.0.47",
     "@types/prop-types": "^15.5.2",
-    "@types/ws": "^3.2.0",
+    "@types/react": "^16.0.18",
+    "@types/socket.io": "^1.4.31",
     "axios": "^0.17.0",
     "concurrently": "^3.5.0",
     "express": "^4.16.2",
@@ -23,7 +24,6 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "socket.io": "^2.0.4",
-    "webpack": "^3.8.1",
-    "ws": "^3.2.0"
+    "webpack": "^3.8.1"
   }
 }
